[gd_scene load_steps=8 format=1]

[ext_resource path="res://GUI/GUITheme.tres" type="Theme" id=1]
[ext_resource path="res://Script/HUD.gd" type="Script" id=2]
[ext_resource path="res://GUI/WindowStyleBox.tres" type="StyleBox" id=3]
[ext_resource path="res://Font/HighScoreSmall.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/HighScore.tres" type="DynamicFont" id=5]
[ext_resource path="res://Texture/Gui/WindowExtensionCorner.png" type="Texture" id=6]
[ext_resource path="res://Texture/Gui/WindowMiddle.png" type="Texture" id=7]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 25
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ScoreText" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 282.0
margin/bottom = 60.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreText" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 48.0
margin/right = 282.0
margin/bottom = 108.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameOverScreen" type="Panel" parent="CanvasLayer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 450.0
margin/bottom = 90.0
custom_styles/panel = ExtResource( 3 )

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 145.0
margin/top = 100.0
margin/right = 305.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESTART"
flat = false

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 320.0
margin/top = 100.0
margin/right = 450.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 100.0
margin/right = 130.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "MENU"
flat = false

[node name="GameOverText" type="Label" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 90.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreText" type="Label" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 132.0
margin/top = -56.0
margin/right = 318.0
margin/bottom = -26.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreText" type="Label" parent="CanvasLayer/GameOverScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 132.0
margin/top = -26.0
margin/right = 318.0
margin/bottom = 4.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HIGH: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScorePartAdapterLeft" type="Sprite" parent="CanvasLayer/GameOverScreen"]

transform/pos = Vector2( 104, 24 )
texture = ExtResource( 6 )

[node name="ScorePartAdapterRight" type="Sprite" parent="CanvasLayer/GameOverScreen"]

transform/pos = Vector2( 346, 24 )
texture = ExtResource( 6 )
flip_h = true

[node name="ScorePartAdapterMiddle" type="Sprite" parent="CanvasLayer/GameOverScreen"]

transform/pos = Vector2( 225, 3 )
transform/scale = Vector2( 4.21875, 0.195312 )
texture = ExtResource( 7 )

[node name="ScorePart" type="Panel" parent="CanvasLayer/GameOverScreen"]

visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 80.0
margin/top = -71.0
margin/right = 370.0
margin/bottom = 21.0

[node name="PauseScreen" type="Panel" parent="CanvasLayer"]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 451.0
margin/bottom = 87.0
custom_styles/panel = ExtResource( 3 )

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 145.0
margin/top = 100.0
margin/right = 306.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESUME"
flat = false

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 320.0
margin/top = 100.0
margin/right = 450.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="MenuButton" type="Button" parent="CanvasLayer/PauseScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 100.0
margin/right = 130.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "MENU"
flat = false

[node name="PauseText" type="Label" parent="CanvasLayer/PauseScreen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 7.0
margin/right = 445.0
margin/bottom = 90.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PauseButton" type="Button" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 85.0
margin/bottom = 85.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "||"
flat = false


